--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 * {
-    margin-right: 40px;
-    margin-left: 40px;
+    margin: 0;
     padding: 0;
    }
    html,body {
@@ -11,6 +10,7 @@
    .services_item{
     margin-left: 40px; 
     margin-right: 40px;
+    margin-top: 200px;
     width: 240px;
     float: left;
    }
@@ -21,10 +21,10 @@
     content: "";
     display: table;
     clear: both;
+    margin: 100px;
     }   
    .services{
     margin: 35px;
-    border: 5px solid black;
    }
    #panorama {
     width: 100%;
@@ -33,6 +33,7 @@
     background-size: cover; /*масштабирование фона*/
    }
    header, main, footer {
+    width:1040px;
     margin:0 auto
    }
    .main__img--float{
@@ -58,5 +59,6 @@
     height: 100px;
    }
    .h1—invisible{
+    /* margin-bottom: 200px; */
     visibility: hidden;
    }
